--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PG game - Javascript capstone project by Microverse (created by Sayyod Saidov) [solo project]",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/MrSayyod/RPG-game#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   }
