--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "eslint-plugin-import": "2.20.x",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "3.17.x",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
