--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^5.2.6",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
+    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "2.20.x",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
