--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "2.20.x",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.6",
     "style-loader": "^2.0.0",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
